--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ python==3.6.13
 matplotlib==3.3.4
 mysql-connector-python==8.0.26
 nltk==3.6.2
+numpy==1.19.5
+pandas==1.1.5
 requests==2.26.0
+seaborn==0.11.1
 torch==1.9.0
 torchtext==0.10.0
